--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="button_container"></div>
     <div id="grid_container"></div>
     <script src="script.js" ></script>
 </body>
